<resources>
    <string name="app_name">Pop Thrift store</string>
    <string name="login_title">Let\'s enter your account</string>
    <string name="welcome_title">Welcome dear</string>
    <string name="instruction_title">Let\'s discover the benefits</string>
    <string name="product_list_title">Anything you ever need</string>
    <string name="email_label">Email</string>
    <string name="email_content_description">Fill with your email</string>
    <string name="password_content_description">Fill with your password</string>
    <string name="password_label">Password</string>
    <string name="fab_login_content_description">Make your login</string>
    <string name="fab_main_content_description">Go to detail screen</string>
    <string name="dont_have_account">Don\'t have a account?</string>
    <string name="create_account">Create now!</string>
    <string name="title_welcome_text">Let\'s start!</string>
    <string name="content_welcome_text">
        We\'re pleased to see you around here.
        \nContinuing you are agreeing to the terms of use and privacy policy
    </string>
    <string name="welcome_image_content_description">Welcome</string>
    <string name="lets_get_started">Let\'s get started</string>
    <string name="title_all_you_can_find_instruction">All you can find</string>
    <string name="title_save_money_instruction">Save money</string>
    <string name="title_full_shopping_cart_instruction">Full your shopping cart</string>
    <string name="content_all_you_can_find_instruction">
        With an endless options to buy the best matching regarding your needs.
    </string>
    <string name="content_save_money_instruction">
        You tell your price and negotiate for the best price ever found.
    </string>
    <string name="content_full_shopping_cart_instruction">
        Here you can buy as much as you can or wish, it all depends on the size of your wardrobe.
    </string>
    <string name="skip_instruction">Skip</string>
    <string name="next_instruction">Next</string>
    <string name="product_card_content_description">Card do produto</string>
    <string name="product_image_content_description">Imagem do produto</string>
    <string name="pricing_format">$%.0f</string>
    <string name="discounted_pricing_format">$%1$.0f $%2$.0f</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="product_in_cart">Product in cart</string>
    <string name="product_already_in_cart">This product is already in your cart</string>
    <string name="add_to_wish_list">Add to wish list</string>
    <string name="added_to_cart">Amazing! This product was added to cart</string>
    <string name="added_to_wish_list">
        Everything done! We\'ll keep you posted about any updates.
    </string>
    <string name="email_is_required">Your email is required</string>
    <string name="password_is_required">Type your password</string>
    <string name="please_complete_login_form">Complete the login form above, please!</string>
    <string name="navigation_close_icon_content_description">Cancel navigation and finish app</string>
    <string name="done_instruction">Done</string>
    <string name="logout_menu">Logout</string>
    <string name="share_product">Share product</string>
    <string name="sold_by">Sold by %s</string>
    <string name="share_discounted_product_text">
        I found this %1$s for just $%2$.0f in the Pop Thrift store app and I thought I would love it too
    </string>
    <string name="share_product_text">
        I found this %1$s for $%2$.0f in the Pop Thrift store app and I thought I would love it too
    </string>
    <string name="my_cart_menu">My cart</string>
    <string name="add_to_wish_list_button">Add to wish list</string>
    <string name="wish_list_name_hint">Give it a name to your wish list</string>
    <string name="add_to_wish_list_content_desc">Add the current product to your wish list</string>
    <string name="get_in_text">Get in</string>
</resources>