<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="viewModel"
            type="dev.filipebezerra.android.popthriftstore.ui.login.LoginViewModel"
            />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/normal_spacing"
        tools:context=".ui.login.LoginScreen"
        >

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="104dp"
            android:layout_height="104dp"
            android:contentDescription="@string/email_content_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_store_logo"
            />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/login_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_spacing"
            android:padding="@dimen/normal_spacing"
            app:cardElevation="0dp"
            app:contentPadding="@dimen/normal_spacing"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_image"
            app:layout_constraintVertical_bias="0.0"
            app:strokeColor="@color/stroke_color"
            app:strokeWidth="1dp"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:id="@+id/email_input_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/email_content_description"
                    app:layout_constraintBottom_toBottomOf="@+id/email_input_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/email_input_layout"
                    app:srcCompat="@drawable/ic_email_24"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_input_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_spacing"
                    android:hint="@string/email_label"
                    app:endIconMode="clear_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/email_input_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:onTextChanged="@{(text, start, before, count) -> viewModel.onChangeEmail()}"
                        android:text="@={viewModel.email}"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/password_input_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/password_content_description"
                    app:layout_constraintBottom_toBottomOf="@+id/password_input_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/password_input_layout"
                    app:srcCompat="@drawable/ic_padlock_24"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_input_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_spacing"
                    android:layout_marginTop="@dimen/normal_spacing"
                    android:hint="@string/password_label"
                    app:endIconMode="password_toggle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/password_input_icon"
                    app:layout_constraintTop_toBottomOf="@+id/email_input_layout"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:onTextChanged="@{(text, start, before, count) -> viewModel.onChangePassword()}"
                        android:text="@={viewModel.password}"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/dont_have_account_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:padding="@dimen/small_spacing"
                    android:text="@string/dont_have_account"
                    app:layout_constraintBaseline_toBaselineOf="@+id/create_account_button"
                    app:layout_constraintEnd_toStartOf="@+id/create_account_button"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <Button
                    android:id="@+id/create_account_button"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_spacing"
                    android:onClick="@{() -> viewModel.createAccount()}"
                    android:text="@string/create_account"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password_input_layout"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:contentDescription="@string/fab_login_content_description"
            android:onClick="@{() -> viewModel.loginMe()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_login_24dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>