<?xml version="1.0" encoding="utf-8"?>
<!--
    This screen needs to arrange the navigation button (let's get started) to the bottom
    of the screen.

    Also In this screen I decided to use NestedScrollView because welcome text could change
    dynamically then getting bigger forcing the user to scroll the screen.
-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="viewModel"
            type="dev.filipebezerra.android.popthriftstore.ui.welcome.WelcomeViewModel"
            />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.welcome.WelcomeScreen"
        >

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            app:layout_constraintBottom_toTopOf="@+id/separator_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/large_spacing"
                android:orientation="vertical"
                >

                <ImageView
                    android:id="@+id/welcome_image"
                    android:layout_width="match_parent"
                    android:layout_height="360dp"
                    android:contentDescription="@string/welcome_image_content_description"
                    app:srcCompat="@drawable/ic_best_offer"
                    />

                <TextView
                    android:id="@+id/title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_spacing"
                    android:text="@string/title_welcome_text"
                    android:textAppearance="?attr/textAppearanceHeadline4"
                    />

                <TextView
                    android:id="@+id/welcome_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_spacing"
                    android:text="@string/content_welcome_text"
                    android:textAppearance="?attr/textAppearanceBody1"
                    />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <View
            android:id="@+id/separator_view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/small_spacing"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/start_shopping_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <Button
            android:id="@+id/start_shopping_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_spacing"
            android:layout_marginEnd="@dimen/small_spacing"
            android:layout_marginBottom="@dimen/small_spacing"
            android:onClick="@{() -> viewModel.startShopping()}"
            android:text="@string/lets_get_started"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>